<resources>
    <string name="app_name">DEVMO</string>
    <string name="payment">Payment 4.99€</string>
    <string name="str_time_left">left to order</string>
    <string name="time">4:24</string>
    <string name="food">Califonia Roll\ncrab cucumber</string>
    <string name="pastOrder">Past Orders</string>
    <string name="yourOrder">Your Orders</string>
    <string name="menu">Menu</string>
    <string name="date">03/12/2023</string>
    <string name="money">€4.99</string>
    <string name="entree">Entree \ncrab \& cucumber</string>
    <string name="main">Main \nchicken \& French fries</string>
    <string name="dessert">Dessert \ncake</string>
    <string name="delivering">Delivering</string>
    <string name="finished">Finished</string>
    <string name="information">Informations</string>
    <string name="username">Philipe Antoine</string>
    <string name="saveInformation">Save changes</string>
    <string name="address">Delivery Address</string>
    <string name="infoAddress">\n    1 Rue de la Noë, 44300 Nantes\n    Point1, Building E\n</string>
    <string name="infoTime">\n    ASAP(10-20min)\n</string>
    <string name="infoPay">\n    Apple Pay\n</string>
    <string name="txt_pay">Payment Method</string>
    <string name="devTime">Delivery Time Preference</string>



</resources>