<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PastOrderActicity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:layout_weight="1"
        android:text="@string/information"
        android:textSize="28sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1.5dp"
        android:layout_below="@+id/title"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:background="@color/line" />

    <TextView
        android:id="@+id/yourOrders"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="99dp"
        android:layout_weight="1"
        android:text="@string/username"
        android:textSize="25dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="590dp"

        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="172dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="-22dp"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/address"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/add"
                android:layout_width="131dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:text="Add address"
                android:textColor="@color/buttom_express"
                android:textSize="15sp" />
        </LinearLayout>

        <EditText
            android:id="@+id/info_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/information_bg"
            android:text="@string/infoAddress"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/txt_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/devTime"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/dev_time"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/information_bg"
            android:entries="@array/dev_time"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/txt_pay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/txt_pay"

            android:textSize="20sp" />

        <Spinner
            android:id="@+id/info_pay"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:background="@drawable/information_bg"
            android:entries="@array/pay_method"
            android:textSize="15sp" />

        <android.widget.Button
            android:id="@+id/saveInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:background="@color/buttom_express"
            android:text="@string/saveInformation"
            android:onClick="saveInfo"
            android:textColor="#ffffff" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="105dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="27dp"
        app:srcCompat="@mipmap/iconUser" />


</RelativeLayout>